Finishes MemeGenerator - adds draggable and resizeable input fields   - adds onClick feature for devices with no hover - fixes notification width overflow on small screens - fixes navbar overflow on touch devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   min-height: 100vh;
   position: relative;
   transition: all .5s;
+  overflow-x: hidden;
 }
 
 #light {
@@ -170,6 +171,10 @@
   box-shadow: none;
   border-radius: 25px;
   font-size: 1.1rem;
+}
+
+.notification-container {
+  width: 30rem;
 }
 
 // Responsive Design PHONES
